syntax = "proto3";

option go_package = "./api";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayPanic (HelloRequest) returns (Empty) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string user_agent = 1;
  string user_agent_lower_case = 2;
  string user_agent_with_x = 3;
}

message Empty {}